# CMakeList.txt: CMakeProject1 的 CMake 项目，在此处包括源代码并定义
# 项目特定的逻辑。
#
cmake_minimum_required (VERSION 3.8)

project ("Cpp-Primer-Plus-6th")

# 将源代码添加到此项目的可执行文件。
add_executable (Chapter02.01_MyFirst "bookcodes/chapter02/myfirst.cpp")
add_executable (Chapter02.02_Carrot "bookcodes/chapter02/carrots.cpp")
add_executable (Chapter02.03_GetInfo "bookcodes/chapter02/getinfo.cpp")
add_executable (Chapter02.04_Sqrt "bookcodes/chapter02/sqrt.cpp")
add_executable (Chapter02.05_OutFunc "bookcodes/chapter02/ourfunc.cpp")
add_executable (Chapter02.06_Convert "bookcodes/chapter02/convert.cpp")

add_executable (exercise02_1 "practice/chapter02/exercise2_1.cpp")

add_executable (Chapter03.01_Limits "bookcodes/chapter03/limits.cpp")
add_executable (Chapter03.02_Exceed "bookcodes/chapter03/exceed.cpp")
# hexadecimal十六进制 Octal八进制
add_executable (Chapter03.03_HexadecimalAndOctal1 "bookcodes/chapter03/hexoct1.cpp")
add_executable (Chapter03.04_HexadecimalAndOctal2 "bookcodes/chapter03/hexoct2.cpp")
add_executable (Chapter03.05_CharType "bookcodes/chapter03/chartype.cpp")
add_executable (Chapter03.06_MoreChar "bookcodes/chapter03/morechar.cpp")
add_executable (Chapter03.07_Bondini "bookcodes/chapter03/bondini.cpp")
add_executable (Chapter03.08_FloatNum "bookcodes/chapter03/floatnum.cpp")
add_executable (Chapter03.09_FloatAdd "bookcodes/chapter03/fltadd.cpp")
add_executable (Chapter03.10_Arithmetic "bookcodes/chapter03/arith.cpp")
add_executable (Chapter03.11_Divide "bookcodes/chapter03/divide.cpp")
#求模运算0
add_executable (Chapter03.12_Modulus "bookcodes/chapter03/modulus.cpp")
add_executable (Chapter03.13_Assign "bookcodes/chapter03/assign.cpp")
add_executable (Chapter03.14_Typecast "bookcodes/chapter03/typecast.cpp")

add_executable (Chapter04.01_ArrayOne "bookcodes/chapter04/arrayone.cpp")
add_executable (Chapter04.02_Strings "bookcodes/chapter04/strings.cpp")
add_executable (Chapter04.03_InString1 "bookcodes/chapter04/instr1.cpp")
add_executable (Chapter04.04_InString2 "bookcodes/chapter04/instr2.cpp")
add_executable (Chapter04.05_InString3 "bookcodes/chapter04/instr3.cpp")
add_executable (Chapter04.06_NumberString "bookcodes/chapter04/numstr.cpp")
add_executable (Chapter04.07_StringType1 "bookcodes/chapter04/strtype1.cpp")
add_executable (Chapter04.08_StringType2 "bookcodes/chapter04/strtype2.cpp")
add_executable (Chapter04.09_StringType3 "bookcodes/chapter04/strtype3.cpp")
add_executable (Chapter04.10_StringType4 "bookcodes/chapter04/strtype4.cpp")
add_executable (Chapter04.11_Struct "bookcodes/chapter04/structur.cpp")
add_executable (Chapter04.12_assgn_Struct "bookcodes/chapter04/assgn_st.cpp")
add_executable (Chapter04.13_ArrayStruct "bookcodes/chapter04/arrstruct.cpp")
add_executable (Chapter04.14_Address "bookcodes/chapter04/address.cpp")
add_executable (Chapter04.15_Pointer "bookcodes/chapter04/pointer.cpp")
add_executable (Chapter04.16_InitializePointer "bookcodes/chapter04/init_ptr.cpp")
add_executable (Chapter04.17_UseNew "bookcodes/chapter04/use_new.cpp")
add_executable (Chapter04.18_ArrayNew "bookcodes/chapter04/arraynew.cpp")
add_executable (Chapter04.19_AddPointer "bookcodes/chapter04/addpntrs.cpp")
add_executable (Chapter04.20_PointerString "bookcodes/chapter04/ptrstr.cpp")
add_executable (Chapter04.21_NewStruct "bookcodes/chapter04/newstrct.cpp")
add_executable (Chapter04.22_Delete "bookcodes/chapter04/delete.cpp")
add_executable (Chapter04.23_MixTypes "bookcodes/chapter04/mixtypes.cpp")
add_executable (Chapter04.24_Choices "bookcodes/chapter04/choices.cpp")

add_executable (Chapter05.01_ForLoop "bookcodes/chapter05/forloop.cpp")
add_executable (Chapter05.02_NumTest "bookcodes/chapter05/num_test.cpp")
add_executable (Chapter05.03_Express "bookcodes/chapter05/express.cpp")
add_executable (Chapter05.04_ForMore "bookcodes/chapter05/formore.cpp")
add_executable (Chapter05.05_BigStep "bookcodes/chapter05/bigstep.cpp")
add_executable (Chapter05.06_ForString1 "bookcodes/chapter05/forstr1.cpp")
add_executable (Chapter05.07_PlusOne "bookcodes/chapter05/plus_one.cpp")
add_executable (Chapter05.08_Block "bookcodes/chapter05/block.cpp")
add_executable (Chapter05.09_ForString2 "bookcodes/chapter05/forstr2.cpp")
add_executable (Chapter05.10_Equal "bookcodes/chapter05/equal.cpp")
add_executable (Chapter05.11_ComparingString1 "bookcodes/chapter05/compstr1.cpp")
add_executable (Chapter05.12_ComparingString2 "bookcodes/chapter05/compstr2.cpp")
add_executable (Chapter05.13_While "bookcodes/chapter05/while.cpp")
add_executable (Chapter05.14_Waiting "bookcodes/chapter05/waiting.cpp")
add_executable (Chapter05.15_DoWhile "bookcodes/chapter05/dowhile.cpp")
add_executable (Chapter05.16_TextIn1 "bookcodes/chapter05/textin1.cpp")
add_executable (Chapter05.17_TextIn2 "bookcodes/chapter05/textin2.cpp")
add_executable (Chapter05.18_TextIn3 "bookcodes/chapter05/textin3.cpp")
add_executable (Chapter05.19_TextIn4 "bookcodes/chapter05/textin4.cpp")
add_executable (Chapter05.20_Nested "bookcodes/chapter05/nested.cpp")

add_executable (Chapter06.01_If "bookcodes/chapter06/if.cpp")
add_executable (Chapter06.02_IfElse "bookcodes/chapter06/ifelse.cpp")
add_executable (Chapter06.03_IfElseIf "bookcodes/chapter06/ifelseif.cpp")
add_executable (Chapter06.04_Or "bookcodes/chapter06/or.cpp")
add_executable (Chapter06.05_And "bookcodes/chapter06/and.cpp")
add_executable (Chapter06.06_MoreAnd "bookcodes/chapter06/more_and.cpp")
add_executable (Chapter06.07_Not "bookcodes/chapter06/not.cpp")
add_executable (Chapter06.08_Cctypes "bookcodes/chapter06/cctypes.cpp")
add_executable (Chapter06.09_Conditional "bookcodes/chapter06/condit.cpp")
add_executable (Chapter06.10_Switch "bookcodes/chapter06/switch.cpp")
add_executable (Chapter06.11_Enum "bookcodes/chapter06/enum.cpp")
add_executable (Chapter06.12_ContinueAndBreak "bookcodes/chapter06/jump.cpp")
add_executable (Chapter06.13_CinFish "bookcodes/chapter06/cinfish.cpp")
add_executable (Chapter06.14_CinGolf "bookcodes/chapter06/cingolf.cpp")
add_executable (Chapter06.15_OutFile "bookcodes/chapter06/outfile.cpp")
add_executable (Chapter06.16_Sum_A_File "bookcodes/chapter06/sumafile.cpp")

add_executable (Chapter07.01_Calling "bookcodes/chapter07/calling.cpp")
add_executable (Chapter07.02_Prototype "bookcodes/chapter07/protos.cpp")
add_executable (Chapter07.03_TwoArgument "bookcodes/chapter07/twoarg.cpp")
add_executable (Chapter07.04_Lotto "bookcodes/chapter07/lotto.cpp")
add_executable (Chapter07.05_ArrayFunction1 "bookcodes/chapter07/arrfun1.cpp")
add_executable (Chapter07.06_ArrayFunction2 "bookcodes/chapter07/arrfun2.cpp")
add_executable (Chapter07.07_ArrayFunction3 "bookcodes/chapter07/arrfun3.cpp")
add_executable (Chapter07.08_ArrayFunction4 "bookcodes/chapter07/arrfun4.cpp")
add_executable (Chapter07.09_FunctionWithStringArgument "bookcodes/chapter07/strgfun.cpp")
add_executable (Chapter07.10_FunctionReturnString "bookcodes/chapter07/strgback.cpp")
add_executable (Chapter07.11_FunctionWithStructures "bookcodes/chapter07/travel.cpp")
add_executable (Chapter07.12_FunctionWithStructureArgument "bookcodes/chapter07/structfun.cpp")
add_executable (Chapter07.13_FunctionWithPointerStructureArgument "bookcodes/chapter07/strctptr.cpp")
add_executable (Chapter07.14_ArrayOfString "bookcodes/chapter07/topfive.cpp")
add_executable (Chapter07.15_ArrayObjects "bookcodes/chapter07/arrobj.cpp")
add_executable (Chapter07.16_Recursion "bookcodes/chapter07/recur.cpp")
add_executable (Chapter07.17_RecursionToSubdivide "bookcodes/chapter07/ruler.cpp")
add_executable (Chapter07.18_PointersToFunctions "bookcodes/chapter07/fun_ptr.cpp")
add_executable (Chapter07.19_ArrayOfFunctionPointers "bookcodes/chapter07/arfupt.cpp")

# TODO: 如有需要，请添加测试并安装目标。
